--- a/styles.css
+++ b/styles.css
@@ -117,10 +117,10 @@ p {
   color: var(--primary-text-color);
   font-size: 20px;
   border: 2px solid var(--primary-text-color);
-  margin-top: 5px;
-  width: 120px;
+  margin-top: 10px;
+  width: 180px;
   padding: 10px;
-  background-color: var(--primary-background-color);
+  border-radius: 10px;
   font-weight: bold;
 }
 .description {
@@ -209,6 +209,10 @@ h3 {
   margin: 25px 0;
 }
 /* donation event end */
+.zakat-fund {
+  text-align: center;
+  margin-top: 50px;
+}
 .zakat-fund p {
   margin-bottom: 25px;
 }
@@ -224,15 +228,16 @@ h3 {
   justify-content: center;
   align-items: center;
   width: 30%;
-  border: 2px solid var(--border-color);
+  border: 3px solid var(--primary-text-color);
   border-radius: 10px;
   margin-right: 15px;
-  height: 100vh;
+  height: 80vh;
 }
 .zakat-fund-card .card-img {
   width: 100%;
   border-radius: 10px;
-  height: 46vh;
+  height: 100vh;
+  overflow: hidden;
 }
 .card-img img {
   width: 100%;
