--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 :root {
   --primary-color: #0d2620;
@@ -12,6 +13,7 @@
   --secondery-text-color: #231955;
   --heading-text-color: #47dfd3;
   --primary-background-color: #ffdede;
+  --anchor-text-color: #d61c4e;
 }
 body {
   background-color: var(--primary-color);
@@ -50,6 +52,7 @@ header {
   color: var(--primary-text-color);
   font-size: 20px;
   border-radius: 5px;
+  transition: 0.2s all ease-in-out;
 }
 .nav-link a:hover {
   background-color: var(--primary-text-color);
@@ -60,11 +63,10 @@ header {
 /* banner section start */
 .banner-section {
   background-image: url(images/Qurbani-2022-website-banner-1600x800px.jpg);
-  /* background-image: linear-gradient(
-    rgba(0, 0, 0, 0.7),
-    rgba(0, 0, 0, 0.3),
-    url(images/Qurbani-2022-website-banner-1600x800px.jpg)
-  ); */
+
+  /* background: linear-gradient(to top rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3)),
+    url(images/Qurbani-2022-website-banner-1600x800px.jpg) no-repeat fixed; */
+
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -78,10 +80,12 @@ header {
 }
 
 h1 {
+  margin-bottom: 20px;
   font-size: 45px;
   font-weight: bold;
   color: var(--heading-text-color);
 }
+
 button {
   background-color: var(--tertiary-color);
   padding: 10px 25px;
@@ -209,6 +213,7 @@ h3 {
   margin: 25px 0;
 }
 /* donation event end */
+
 .zakat-fund {
   text-align: center;
   margin-top: 50px;
@@ -216,6 +221,7 @@ h3 {
 .zakat-fund p {
   margin-bottom: 25px;
 }
+
 .zakat-fund-content {
   display: flex;
   justify-content: center;
@@ -232,6 +238,10 @@ h3 {
   border-radius: 10px;
   margin-right: 15px;
   height: 80vh;
+  transition: 0.2s all ease-in-out;
+}
+.zakat-fund-card:hover {
+  transform: translateY(-5%);
 }
 .zakat-fund-card .card-img {
   width: 100%;
@@ -252,4 +262,80 @@ h3 {
 }
 .card-content {
   padding: 10px;
+}
+.card-content a {
+  font-size: 20px;
+  font-weight: bold;
+  color: var(--anchor-text-color);
+}
+
+form {
+  width: 50%;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  background-color: var(--primary-background-color);
+  align-items: center;
+  margin: 30px auto;
+  border: 2px solid var(--heading-text-color);
+  border-radius: 15px;
+}
+fieldset {
+  margin: 0 auto;
+  text-align: center;
+}
+input {
+  margin: 10px 0;
+  padding: 10px 15px;
+  border-radius: 15px;
+  outline: none;
+}
+label {
+  padding: 10px 30px;
+}
+#submit {
+  padding: 10px 20px;
+  background-color: var(--tertiary-color);
+  text-align: center;
+  border: none;
+  color: var(--primary-text-color);
+  transition: 0.2s all ease-in-out;
+}
+#submit:hover {
+  background-color: var(--primary-text-color);
+  color: var(--primary-color);
+}
+input,
+legend,
+label {
+  font-size: 20px;
+  font-weight: bold;
+  color: var(--secondery-text-color);
+}
+input:focus {
+  background-color: var(--primary-color);
+  color: var(--primary-text-color);
+}
+footer {
+  background-color: var(--secondery-text-color);
+  color: var(--primary-background-color);
+}
+.social-media {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.social-media img {
+  margin-right: 15px;
+  transition: 0.2s ease-in-out;
+}
+.social-media img:hover {
+  transform: translateY(-20%);
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 10px;
 }
